--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,9 @@
 {
   "hello": "helloEN",
   "bye": "bye",
-  "chooseLang": "choose Language"
+  "chooseLang": "choose Language",
+  "securityEquipments": "Sécurity equipments",
+  "insideEquipments": "Inside equipments",
+  "outsideEquipments": "Outside equipments and frames",
+  "otherEquipments": "Other equipments"
 }
