--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,5 +1,9 @@
 {
   "hello": "salut",
   "bye": "Au revoir",
-  "chooseLang": "choisir la langue"
+  "chooseLang": "choisir la langue",
+  "securityEquipments": "Equipement de sécurité",
+  "insideEquipments": "Equipements intérieur",
+  "outsideEquipments": "Equipements extérieur et chassis",
+  "otherEquipments": "Autre équipements"
 }
